--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
      <!-- Hero-->
-    <header class="header">
+    <header class="header-main">
         <div class="container">
             <a class="reset-link logo-up" lang="en" href="index.html">Web<span class="logo-header">Studio</span></a>
             <nav class="navigation">
@@ -34,10 +34,7 @@
         <!-- Hero-->
         <section class="hero">
             <div class="container">
-                <h1 class="hero-title">
-                    <span>Эффективные решения</span>
-                    <span>для вашего бизнеса</span>
-                    </h1>
+                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                 <button class="modal-button" type="button">Заказать услугу</button>
             </div>
         </section>
