--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header-prtf">
         <div class="container">
             <a class="reset-link logo-up" lang="en" href="index.html">Web<span class="logo-header">Studio</span></a>
             <nav class="navigation">
